--- a/TicketAutomation-frontend/register.html
+++ b/TicketAutomation-frontend/register.html
@@ -32,7 +32,7 @@
         <div id="message" class="text-center"></div>
     </div>
 </div>
-
+<script src="js/auth.js"></script>
 <script src="js/register.js"></script>
 </body>
 </html>
